exports[`test should support rendering a string without translation 1`] = `
<div
  className="inner">
  String
</div>
`;

exports[`test should support rendering a string without translation 2`] = `
<div
  className="inner disable-overflow">
  String
</div>
`;
